--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,12 +5,12 @@
         "activityBar.inactiveForeground": "#701E90",
         "activityBarBadge.foreground": "#230006",
         "activityBarBadge.background": "#FF7D92",
-        "statusBar.foreground": "#E6EB82",
-        "statusBar.background": "#636800",
-        "statusBarItem.hoverBackground": "#37550C",
-        "statusBarItem.remoteForeground": "#AFFF96",
-        "statusBarItem.remoteBackground": "#2B8110",
-        "statusBar.debuggingForeground": "#000000",
-        "statusBar.debuggingBackground": "#9A9E36"
+        "statusBar.foreground": "#B8ECFF",
+        "statusBar.background": "#1D708F",
+        "statusBarItem.hoverBackground": "#2B4773",
+        "statusBarItem.remoteForeground": "#EEEEFF",
+        "statusBarItem.remoteBackground": "#4E4FB5",
+        "statusBar.debuggingForeground": "#00090D",
+        "statusBar.debuggingBackground": "#53A7C5"
     }
 }
