--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,12 +5,12 @@
         "activityBar.inactiveForeground": "#701E90",
         "activityBarBadge.foreground": "#230006",
         "activityBarBadge.background": "#FF7D92",
-        "statusBar.foreground": "#B8ECFF",
-        "statusBar.background": "#1D708F",
-        "statusBarItem.hoverBackground": "#2B4773",
-        "statusBarItem.remoteForeground": "#EEEEFF",
-        "statusBarItem.remoteBackground": "#4E4FB5",
-        "statusBar.debuggingForeground": "#00090D",
-        "statusBar.debuggingBackground": "#53A7C5"
+        "statusBar.foreground": "#F8F3FF",
+        "statusBar.background": "#703EB4",
+        "statusBarItem.hoverBackground": "#612C72",
+        "statusBarItem.remoteForeground": "#FFE6FB",
+        "statusBarItem.remoteBackground": "#9D2F8B",
+        "statusBar.debuggingForeground": "#1B0041",
+        "statusBar.debuggingBackground": "#A675EA"
     }
 }
