--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,12 +5,12 @@
         "activityBar.inactiveForeground": "#701E90",
         "activityBarBadge.foreground": "#230006",
         "activityBarBadge.background": "#FF7D92",
-        "statusBar.foreground": "#FAF3FF",
-        "statusBar.background": "#7F38AD",
-        "statusBarItem.hoverBackground": "#682A69",
-        "statusBarItem.remoteForeground": "#FFE1F4",
-        "statusBarItem.remoteBackground": "#A42F79",
-        "statusBar.debuggingForeground": "#24003B",
-        "statusBar.debuggingBackground": "#B66FE4"
+        "statusBar.foreground": "#C3FC86",
+        "statusBar.background": "#407903",
+        "statusBarItem.hoverBackground": "#245C18",
+        "statusBarItem.remoteForeground": "#9FFFB6",
+        "statusBarItem.remoteBackground": "#158630",
+        "statusBar.debuggingForeground": "#000000",
+        "statusBar.debuggingBackground": "#77B03A"
     }
 }
