--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
     "redux-devtools-extension": "^2.13.8",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
