--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,12 +5,12 @@
         "activityBar.inactiveForeground": "#701E90",
         "activityBarBadge.foreground": "#230006",
         "activityBarBadge.background": "#FF7D92",
-        "statusBar.foreground": "#94FFEF",
-        "statusBar.background": "#107D6D",
-        "statusBarItem.hoverBackground": "#1D5163",
-        "statusBarItem.remoteForeground": "#DAE9FF",
-        "statusBarItem.remoteBackground": "#3261A7",
+        "statusBar.foreground": "#97FFDF",
+        "statusBar.background": "#0E815E",
+        "statusBarItem.hoverBackground": "#19555B",
+        "statusBarItem.remoteForeground": "#CDE8FF",
+        "statusBarItem.remoteBackground": "#27689D",
         "statusBar.debuggingForeground": "#000000",
-        "statusBar.debuggingBackground": "#46B4A3"
+        "statusBar.debuggingBackground": "#44B894"
     }
 }
